--- a/src/kurilenko/view/main-view.fxml
+++ b/src/kurilenko/view/main-view.fxml
@@ -41,12 +41,17 @@
                   <Insets bottom="10.0" left="15.0" top="10.0" />
                </HBox.margin>
             </Button>
+            <Button mnemonicParsing="false" onAction="#showHistogram" text="Histogram">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="15.0" top="10.0" />
+               </HBox.margin>
+            </Button>
          </children></HBox>
    </bottom>
    <right>
-      <SplitPane prefHeight="504.0" prefWidth="214.0" BorderPane.alignment="CENTER">
+      <SplitPane prefHeight="504.0" prefWidth="215.0" BorderPane.alignment="CENTER">
         <items>
-            <VBox prefHeight="200.0" prefWidth="100.0">
+            <VBox prefHeight="200.0" prefWidth="215.0">
                <children>
                   <HBox alignment="TOP_CENTER" prefHeight="30.0" prefWidth="212.0">
                      <children>
@@ -63,12 +68,12 @@
                      </children></HBox>
                   <HBox alignment="TOP_CENTER" prefHeight="30.0" prefWidth="212.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#saltAndPepperNoise" text="Salt and pepper">
+                        <Button mnemonicParsing="false" onAction="#saltAndPepperNoise" text="Соль и перец">
                            <HBox.margin>
                               <Insets right="5.0" />
                            </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#gaussianNoise" text="Gauss">
+                        <Button mnemonicParsing="false" onAction="#gaussianNoise" text="Гаусса">
                            <HBox.margin>
                               <Insets left="5.0" />
                            </HBox.margin>
@@ -77,14 +82,15 @@
                   </HBox>
                   <HBox prefHeight="32.0" prefWidth="212.0">
                      <children>
-                        <Label prefHeight="32.0" prefWidth="67.0" text="Brightness" />
-                        <Slider fx:id="brightnessSlider" blockIncrement="5.0" max="50.0" min="-50.0">
+                        <Label prefHeight="32.0" prefWidth="67.0" text="Яркость" />
+                        <Slider fx:id="brightnessSlider" blockIncrement="1.0" max="10.0" min="-10.0">
                            <HBox.margin>
                               <Insets top="10.0" />
                            </HBox.margin>
                         </Slider>
                      </children>
                   </HBox>
+                  <Button mnemonicParsing="false" onAction="#improveContrast" prefHeight="25.0" prefWidth="215.0" text="Улучшить контрастность" />
                </children>
             </VBox>
         </items>
