--- a/src/kurilenko/view/main-view.fxml
+++ b/src/kurilenko/view/main-view.fxml
@@ -116,6 +116,27 @@
                         </Label>
                      </children>
                   </GridPane>
+                  <GridPane layoutX="10.0" layoutY="131.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#lowThreeOnThree" prefHeight="25.0" prefWidth="74.0" text="3*3" GridPane.rowIndex="1" />
+                        <Button mnemonicParsing="false" onAction="#lowFiveOnFive" prefHeight="25.0" prefWidth="85.0" text="5*5" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Button mnemonicParsing="false" onAction="#lowSevenOnSeven" prefHeight="25.0" prefWidth="71.0" text="7*7" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="28.0" prefWidth="71.0" text="НЧ" textAlignment="CENTER" GridPane.columnIndex="1">
+                           <font>
+                              <Font size="12.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </GridPane>
                </children>
             </VBox>
         </items>
